<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Call</string>
    <string name="title_section1">启动</string>
    <string name="title_section2">设备注册</string>
    <string name="title_section3">关于</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="button01">Start</string>
    <string name="text01"></string>
    <string name="radiobutton1">Stat</string>
    <string name="button02">send</string>
    <string name="textviewinput"></string>

</resources>
